# ModernFortran

codes/Arrays/01/: README.txt  main.f90
codes/Arrays/02/: main.f90
codes/Arrays/03/: main.f90
codes/Arrays/04/: main.f90
codes/Arrays/05/: README.txt  main.f90
codes/Arrays/06/: main.f90
codes/Arrays/07/: main.f90
codes/Arrays/08/: README.txt  main.f90
codes/Arrays/09/: README.txt  main.f90
codes/Arrays/10/: README.txt  main.f90
codes/Arrays/11/: README.txt  main.f90
codes/Arrays/12/: README.txt  main.f90
codes/Arrays/13/: main.f90
codes/Arrays/14/: README.txt  main.f90
codes/BasicInputOutput/01/: README.txt  main.f90
codes/BasicInputOutput/02/: main.f90
codes/BasicInputOutput/03/: main.f90
codes/BasicInputOutput/04/: main.f90
codes/Characters/01/: main.f90
codes/Characters/02/: main.f90
codes/Characters/03/: main.f90
codes/Characters/04/: main.f90
codes/Characters/05/: main.f90
codes/Characters/06/: README.txt  main.f90
codes/Constants/01/: README.txt  main.f90
codes/Decisions/01/: README.txt  main.f90
codes/Decisions/02/: main.f90
codes/Decisions/03/: README.txt  main.f90
codes/Decisions/04/: README.txt  main.f90
codes/Decisions/05/: README.txt  main.f90
codes/Decisions/06/: main.f90
codes/Decisions/07/: README.txt  main.f90
codes/Decisions/08/: README.txt  main.f90
codes/DerivedDataTypes/01/: main.f90
codes/DerivedDataTypes/02/: README.txt  main.f90
codes/DynamicArrays/01/: README.txt  main.f90
codes/DynamicArrays/02/: main.f90
codes/DynamicArrays/03/: main.f90
codes/FileInputOutput/01/: README.txt  main.f90
codes/FileInputOutput/02/: main.f90
codes/IntrinsicFunctions/01/: README.txt  main.f90
codes/IntrinsicFunctions/02/: main.f90
codes/Loops/01/: main.f90
codes/Loops/02/: README.txt  main.f90
codes/Loops/03/: README.txt  main.f90
codes/Loops/04/: README.txt  main.f90
codes/Loops/05/: README.txt  main.f90
codes/Loops/06/: README.txt  main.f90
codes/Loops/07/: README.txt  main.f90
codes/MPI/MPI_GET_LIBRARY_VERSION/01a/: CMakeLists.txt  main.f90
codes/MPI/MPI_GET_LIBRARY_VERSION/01c/: CMakeLists.txt
codes/Modules/01/: main.f90
codes/Modules/01a/: README.txt  mymod.mod  sub.f90
codes/Modules/01b/: README.txt  mymod.mod  sub.f90
codes/Modules/01c/: csub.lib  mymod.mod
codes/Modules/01d/: CMakeLists.txt  README.txt  main.f90
codes/Modules/01d/src/: CMakeLists.txt  csub.c
codes/Modules/02/: main.f90
codes/Modules/03/: README.txt  main.f90
codes/Modules/04/: README.txt
codes/Modules/04-makefile/: Makefile  main.f90
codes/Modules/05-makefile/: Makefile
codes/Modules/05-makefile-01/: Makefile
codes/Modules/05-makefile-02/: Makefile
codes/Modules/06/: README.txt  sub1.f90
codes/Modules/06-makefile/: Makefile  mymod1.f90
codes/Modules/07/: README.txt  main.f90  twomods.f90
codes/Modules/08/: README.txt
codes/Modules/09/: README.txt
codes/Numbers/01/: README.txt  main.f90
codes/Numbers/02/: main.f90
codes/Numbers/03/: main.f90
codes/Numbers/04/: main.f90
codes/Numbers/05/: main.f90
codes/Numbers/06/: main.f90
codes/Numbers/07/: main.f90
codes/Numbers/08/: main.f90
codes/Numbers/09/: main.f90
codes/Numbers/10/: main.f90
codes/NumericPrecision/01/: main.f90
codes/NumericPrecision/02/: README.txt  main.f90
codes/NumericPrecision/03/: main.f90
codes/Operators/01/: README.txt  main.f90
codes/Operators/02/: README.txt  main.f90
codes/Operators/03/: README.txt  main.f90
codes/Operators/04/: README.txt  main.f90
codes/Pointers/01/: main.f90
codes/Pointers/02/: README.txt  main.f90
codes/Pointers/03/: main.f90
codes/Pointers/04/: main.f90
codes/Procedures/01/: main.f90
codes/Procedures/02/: README.txt  main.f90
codes/Procedures/03/: main.f90
codes/Procedures/04/: main.f90
codes/Procedures/05/: main.f90
codes/Procedures/06/: main.f90
codes/Procedures/07-makefile/: README.txt
codes/Procedures/08/: README.txt
codes/ProgramLibraries/01/: README.txt
codes/Strings/01/: main.f90
codes/Strings/02/: README.txt  main.f90
codes/Strings/03/: main.f90
codes/Strings/04/: main.f90
codes/Strings/05/: main.f90
codes/Variables/01/: README.txt  main.f90
codes/addNumbers/01/: README.txt  main.f90
codes/c-call-fortran/01/: main.c
codes/cgns/write_grid_unst/01/: CMakeLists.txt
codes/cgns/write_grid_unst/03/: CMakeLists.txt
codes/cmake/module/02/: CMakeLists.txt  README.txt
codes/data/01/: CMakeLists.txt  README.txt  main.f90
codes/dependency/01/: README.txt
codes/dependency/02/: README.txt
codes/dependency/03/: main.f90
codes/fortran-call-c-lib/shared/windows/04a/: CMakeLists.txt  sub.c
codes/fortran-call-c-lib/shared/windows/04a/test/: CMakeLists.txt
codes/fortran-call-c-lib/shared/windows/04b/: CMakeLists.txt
codes/fortran-call-c-lib/shared/windows/04b/test/: CMakeLists.txt
codes/fortran-call-c-lib/static/windows/04b/test/: CMakeLists.txt
codes/include/02a/: CMakeLists.txt
codes/include/02b/: CMakeLists.txt  README.txt
codes/include/02e/: CMakeLists.txt  main.f90
codes/intel-fortran/03/: CMakeLists.txt  main.f90
codes/mixed/01/: CMakeLists.txt  csub.c  foo.f90  fprog.f90  main.c
codes/mixed/04a/: CMakeLists.txt
codes/mixed/06a/src/interfaces/: CMakeLists.txt
codes/module/02/: CMakeLists.txt
codes/windows/fortran-call-c-lib/shared/ifx/cmake/02/: CMakeLists.txt
codes/windows/fortran-call-c-lib/shared/ifx/cmake/msvc/ninja/01/: CMakeLists.txt
codes/windows/fortran-call-c-lib/static/ifx/cmake/01/: CMakeLists.txt  README.txt
codes/windows/fortran-call-c-lib/static/ifx/cmake/03/: CMakeLists.txt
codes/windows/fortran-call-c-lib/static/ifx/cmake/03/lib/: sub.c
codes/windows/fortran-call-c-lib/static/ifx/cmake/03a/: CMakeLists.txt  README.txt
codes/windows/fortran-call-c-lib/static/ifx/cmake/03a/test/: main.f90
codes/windows/fortran-call-c-lib/static/ifx/cmake/msvc/ninja/02/: CMakeLists.txt  README.txt
codes/windows/fortran-call-c-lib/static/ifx/cmake/msvc/ninja/02/lib/: sub.c
codes/windows/fortran-example/print_string/01c/: CMakeLists.txt  main.f90
(+466 files in other folders)
